...
      },
      floatingActionButton = {
          FloatingActionButton(
              onClick = {
                  /*navigationActions.navigateTo(Route.CREATE_TODO)*/
              }) {
              Icon(Icons.Default.Add, contentDescription = "Create")
          }
      }) { innerPadding ->
      Log.w(TAG, "Inventory: called")
      if (uiState.items.isEmpty()){
          Box(modifier = Modifier.padding(innerPadding).fillMaxSize()) {
              Text(
...
